--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "build:console": "cd packages/react-console && tsc -p tsconfig.json && vite build",
     "dev": "cd packages/react-components && vite -c vite.config.app.ts",
     "preview": "npm run build:app && cd packages/react-components && vite preview -c vite.config.app.ts",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "publish-packages": "changeset publish"
   },
   "dependencies": {
     "@buf/googleapis_googleapis.bufbuild_es": "^2.5.2-20250411203938-61b203b9a916.1",
@@ -41,6 +44,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.5",
     "@eslint/js": "^9.21.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jwt-decode": "^3.1.0",
