--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@runmedev/react-components",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "type": "module",
     "private": false,
     "main": "dist/react-components.cjs",
@@ -31,5 +31,8 @@
         "@radix-ui/react-dropdown-menu": "^2.1.15",
         "@radix-ui/react-icons": "^1.3.2",
         "@radix-ui/themes": "^3.2.1"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
