--- a/.github/workflows/bundle.yaml
+++ b/.github/workflows/bundle.yaml
@@ -20,6 +20,10 @@ jobs:
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          fetch-tags: true
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
