--- a/.github/workflows/bundle.yaml
+++ b/.github/workflows/bundle.yaml
@@ -28,6 +28,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
       - name: Install dependencies
         uses: stateful/runme-action@v2
         with:
