--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
     "@tailwindcss/vite": "^4.0.17",
+    "dexie": "^4.0.11",
     "jwt-decode": "^4.0.0",
     "md5": "^2.3.0",
     "react": "^19.0.0",
