Add test infra and first test cases for components
Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

--- a/packages/react-console/package.json
+++ b/packages/react-console/package.json
@@ -29,7 +29,11 @@
     "@radix-ui/themes": "^3.2.1"
   },
   "scripts": {
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "publishConfig": {
     "access": "public"
