--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "dev": "cd packages/react-components && vite -c vite.config.app.ts",
     "preview": "npm run build:app && cd packages/react-components && vite preview -c vite.config.app.ts",
     "lint": "eslint .",
+    "test": "npm run test -w packages/react-components && npm run test -w packages/react-console",
+    "test:run": "npm run test:run -w packages/react-components && npm run test:run -w packages/react-console",
+    "test:ui": "npm run test:ui -w packages/react-components",
+    "test:coverage": "npm run test:coverage -w packages/react-components && npm run test:coverage -w packages/react-console",
     "changeset": "changeset",
     "version-packages": "changeset version",
     "publish-packages": "changeset publish"
@@ -48,6 +52,9 @@
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
     "@eslint/js": "^9.21.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.0.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jwt-decode": "^3.1.0",
     "@types/md5": "^2.3.5",
@@ -57,14 +64,18 @@
     "@types/uuid": "^10.0.0",
     "@types/vscode-notebook-renderer": "^1.72.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^2.1.9",
+    "@vitest/ui": "^2.0.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.2.0",
+    "jsdom": "^25.0.0",
     "prettier": "^3.6.0",
     "rimraf": "^6.0.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.3.5",
-    "vite-plugin-compression": "^0.5.1"
+    "vite-plugin-compression": "^0.5.1",
+    "vitest": "^2.0.0"
   }
 }
