--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -22,16 +22,20 @@
     "@runmedev/react-console": "file:../react-console"
   },
   "scripts": {
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "peerDependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/themes": "^3.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0",
-    "react-router-dom": "^7.5.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/themes": "^3.2.1"
+    "react-router-dom": "^7.5.0"
   },
   "publishConfig": {
     "access": "public"
