--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,13 @@
       "path": "./packages/react-components/tsconfig.app.json"
     },
     {
+      "path": "./packages/react-components/tsconfig.test.json"
+    },
+    {
       "path": "./packages/react-console/tsconfig.json"
+    },
+    {
+      "path": "./packages/react-console/tsconfig.test.json"
     },
     {
       "path": "./tsconfig.node.json"
