Migrate to interceptors (#6)
* Move CellConsole to separate file

Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

* Add test infra and first test cases for components

Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

* Add test harness with examples

Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

* Fix type errors with toBeInTheDocument

Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

* Bundle and test

Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

* Make IDEs not balk at Jest DOM's types

Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

* Change job name

Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

* Use interceptors everywhere to handle authorization

Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

---------

Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: Bundle
+name: Test
 on:
   pull_request:
   push:
@@ -14,7 +14,7 @@ env:
   SHELL: /bin/bash
 
 jobs:
-  build:
+  test:
     strategy:
       matrix:
         os: [ubuntu-latest]
@@ -40,3 +40,7 @@ jobs:
         uses: stateful/runme-action@v2
         with:
           workflows: build
+      - name: 🧪 Test
+        uses: stateful/runme-action@v2
+        with:
+          workflows: test
