--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -19,7 +19,7 @@
     "dist"
   ],
   "devDependencies": {
-    "@runmedev/react-console": "file:../react-console"
+    "@runmedev/react-console": "workspace:*"
   },
   "scripts": {
     "clean": "rimraf dist",
