--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -29,11 +29,13 @@
     "test:coverage": "vitest run --coverage"
   },
   "peerDependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.4.0",
     "react-router-dom": "^7.5.0"
   },
