--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/themes": "^3.2.1",
     "@tailwindcss/vite": "^4.0.17",
     "dexie": "^4.0.11",
+    "js-cookie": "3.0.5",
     "jwt-decode": "^4.0.0",
     "md5": "^2.3.0",
     "react": "^19.0.0",
@@ -54,6 +55,7 @@
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.0.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/js-cookie": "3.0.6",
     "@types/jwt-decode": "^3.1.0",
     "@types/md5": "^2.3.5",
     "@types/node": "20.12.7",
