--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -29,6 +29,7 @@
     "test:coverage": "vitest run --coverage"
   },
   "peerDependencies": {
+    "js-cookie": "^3.0.5",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
