--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@connectrpc/connect": "^2.0.2",
     "@connectrpc/connect-node": "^2.0.2",
     "@connectrpc/connect-web": "^2.0.2",
-    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-avatar": "1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
@@ -38,6 +37,7 @@
     "js-cookie": "3.0.5",
     "jwt-decode": "^4.0.0",
     "md5": "^2.3.0",
+    "monaco-editor": "0.52.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
