--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@runmedev/react-components",
-  "version": "3.15.5",
+  "version": "3.15.6-next.0",
   "license": "Apache-2.0",
   "type": "module",
   "private": false,
