--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "publish-packages": "changeset publish"
   },
   "dependencies": {
-    "@buf/googleapis_googleapis.bufbuild_es": "^2.6.0-20250411203938-61b203b9a916.1",
-    "@buf/stateful_runme.bufbuild_es": "^2.6.0-20250708175514-aa6fb4055281.1",
-    "@bufbuild/protobuf": "^2.6.0",
-    "@connectrpc/connect": "^2.0.2",
-    "@connectrpc/connect-node": "^2.0.2",
-    "@connectrpc/connect-web": "^2.0.2",
+    "@buf/googleapis_googleapis.bufbuild_es": "2.9.0-20251009205305-72c8614f3bd0.1",
+    "@buf/runmedev_runme.bufbuild_es": "2.9.0-20251009190022-068cc6f56f01.1",
+    "@bufbuild/protobuf": "2.9.0",
+    "@connectrpc/connect": "^2.1.0",
+    "@connectrpc/connect-node": "^2.1.0",
+    "@connectrpc/connect-web": "^2.1.0",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-avatar": "1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -44,7 +44,7 @@
     "react-router": "^7.4.0",
     "react-router-dom": "^7.5.0",
     "rxjs": "^7.8.2",
-    "tailwindcss": "4.1.11",
+    "tailwindcss": "^4.1.11",
     "ulid": "^3.0.1",
     "uuid": "^11.1.0"
   },
