--- a/package.json
+++ b/package.json
@@ -22,61 +22,61 @@
     "publish-packages": "changeset publish"
   },
   "dependencies": {
-    "@buf/googleapis_googleapis.bufbuild_es": "^2.6.0-20250411203938-61b203b9a916.1",
-    "@buf/stateful_runme.bufbuild_es": "^2.6.0-20250708175514-aa6fb4055281.1",
-    "@bufbuild/protobuf": "^2.6.0",
-    "@connectrpc/connect": "^2.0.2",
-    "@connectrpc/connect-node": "^2.0.2",
-    "@connectrpc/connect-web": "^2.0.2",
+    "@buf/googleapis_googleapis.bufbuild_es": "2.9.0-20251009205305-72c8614f3bd0.1",
+    "@buf/runmedev_runme.bufbuild_es": "2.9.0-20251009190022-068cc6f56f01.1",
+    "@bufbuild/protobuf": "2.9.0",
+    "@connectrpc/connect": "^2.1.0",
+    "@connectrpc/connect-node": "^2.1.0",
+    "@connectrpc/connect-web": "^2.1.0",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-avatar": "1.1.10",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
-    "@tailwindcss/vite": "^4.0.17",
-    "dexie": "^4.0.11",
+    "@tailwindcss/vite": "^4.1.14",
+    "dexie": "^4.2.1",
     "js-cookie": "3.0.5",
     "jwt-decode": "^4.0.0",
     "md5": "^2.3.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
-    "react-router": "^7.4.0",
-    "react-router-dom": "^7.5.0",
+    "react-router": "^7.9.4",
+    "react-router-dom": "^7.9.4",
     "rxjs": "^7.8.2",
-    "tailwindcss": "4.1.11",
+    "tailwindcss": "^4.1.14",
     "ulid": "^3.0.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.29.5",
-    "@eslint/js": "^9.21.0",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.0.0",
+    "@changesets/cli": "^2.29.7",
+    "@eslint/js": "^9.37.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/js-cookie": "3.0.6",
     "@types/jwt-decode": "^3.1.0",
     "@types/md5": "^2.3.5",
     "@types/node": "20.12.7",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
     "@types/uuid": "^10.0.0",
-    "@types/vscode-notebook-renderer": "^1.72.3",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@types/vscode-notebook-renderer": "^1.72.4",
+    "@vitejs/plugin-react": "^4.7.0",
     "@vitest/coverage-v8": "^2.1.9",
-    "@vitest/ui": "^2.0.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.2.0",
-    "jsdom": "^25.0.0",
-    "prettier": "^3.6.0",
+    "@vitest/ui": "^2.1.9",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.23",
+    "globals": "^16.4.0",
+    "jsdom": "^25.0.1",
+    "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.3.5",
+    "typescript-eslint": "^8.46.0",
+    "vite": "^6.3.6",
     "vite-plugin-compression": "^0.5.1",
-    "vitest": "^2.0.0"
+    "vitest": "^2.1.9"
   },
   "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
