Bring component code base into this repo
Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,12 @@
       "path": "./packages/react-console/tsconfig.test.json"
     },
     {
+      "path": "./packages/renderers/tsconfig.json"
+    },
+    {
+      "path": "./packages/renderers/tsconfig.test.json"
+    },
+    {
       "path": "./tsconfig.node.json"
     }
   ]
