Sort out dependencies
Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

--- a/packages/react-console/package.json
+++ b/packages/react-console/package.json
@@ -18,6 +18,9 @@
   "files": [
     "dist"
   ],
+  "devDependencies": {
+    "@runmedev/renderers": "workspace:*"
+  },
   "peerDependencies": {
     "@bufbuild/protobuf": "^2.9.0",
     "react": "^19.0.0",
