Bring Runme renderers into this repo, starting with TerminalView (#23)
* Bring component code base into this repo

Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

* Sort out dependencies

Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

* Theme-handling

Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

* Fix tests

Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

---------

Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "type": "module",
   "scripts": {
     "clean": "pnpm --filter @runmedev/react-components run clean && pnpm --filter @runmedev/react-console run clean",
-    "build": "pnpm run clean && pnpm run build:console && pnpm run build:components && pnpm run build:app",
+    "build": "pnpm run clean && pnpm run build:renderers && pnpm run build:console && pnpm run build:components && pnpm run build:app",
     "build:components": "cd packages/react-components && tsc -b && vite build",
     "build:app": "cd packages/react-components && tsc -b tsconfig.app.json && vite build -c vite.config.app.ts",
     "build:console": "cd packages/react-console && tsc -p tsconfig.json && vite build",
+    "build:renderers": "cd packages/renderers && tsc -p tsconfig.json && vite build",
     "dev": "cd packages/react-components && vite -c vite.config.app.ts",
     "preview": "pnpm run build:app && cd packages/react-components && vite preview -c vite.config.app.ts",
     "lint": "eslint .",
@@ -33,10 +34,18 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
+    "@vscode/webview-ui-toolkit": "^1.2.2",
     "@tailwindcss/vite": "^4.1.14",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-serialize": "^0.13.0",
+    "@xterm/addon-unicode11": "^0.8.0",
+    "@xterm/addon-web-links": "^0.11.0",
+    "@xterm/headless": "^5.5.0",
+    "@xterm/xterm": "^5.5.0",
     "dexie": "^4.2.1",
     "js-cookie": "3.0.5",
     "jwt-decode": "^4.0.0",
+    "lit": "3.3.0",
     "md5": "^2.3.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -63,6 +72,7 @@
     "@types/react-dom": "^19.2.1",
     "@types/uuid": "^10.0.0",
     "@types/vscode-notebook-renderer": "^1.72.4",
+    "@types/vscode": "1.85.0",
     "@vitejs/plugin-react": "^4.7.0",
     "@vitest/coverage-v8": "^2.1.9",
     "@vitest/ui": "^2.1.9",
