--- a/packages/renderers/package.json
+++ b/packages/renderers/package.json
@@ -17,7 +17,9 @@
   "files": [
     "dist"
   ],
-  "peerDependencies": {},
+  "peerDependencies": {
+    "@bufbuild/protobuf": "^2.9.0"
+  },
   "scripts": {
     "clean": "rimraf dist",
     "test": "vitest",
