--- a/packages/renderers/package.json
+++ b/packages/renderers/package.json
@@ -22,7 +22,7 @@
   "files": [
     "dist"
   ],
-  "peerDependencies": {
+  "dependencies": {
     "@bufbuild/protobuf": "^2.9.0"
   },
   "scripts": {
