Try to add an app console and reproduce the error; Uncaught NotSupportedError: Failed to execute 'define' on 'CustomElementRegistry': the name close-cell-button has already been used with this registry

--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -19,7 +19,8 @@
     "dist"
   ],
   "devDependencies": {
-    "@runmedev/react-console": "workspace:*"
+    "@runmedev/react-console": "workspace:*",
+    "@runmedev/renderers": "workspace:*"
   },
   "scripts": {
     "clean": "rimraf dist",
