--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -30,6 +30,8 @@
     "test:coverage": "vitest run --coverage"
   },
   "peerDependencies": {
+    "@runmedev/react-console": "workspace:*",
+    "@runmedev/renderers": "workspace:*",
     "js-cookie": "^3.0.5",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
