--- a/packages/renderers/package.json
+++ b/packages/renderers/package.json
@@ -17,6 +17,11 @@
       "types": "./dist/components.d.ts",
       "import": "./dist/components.mjs",
       "require": "./dist/components.cjs"
+    },
+    "./streams/fakeStreams": {
+      "types": "./dist/streams/fakeStreams.d.ts",
+      "import": "./dist/streams/fakeStreams.mjs",
+      "require": "./dist/streams/fakeStreams.cjs"
     }
   },
   "files": [
