Remove AppConsole from react-components.

--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -19,8 +19,7 @@
     "dist"
   ],
   "devDependencies": {
-    "@runmedev/react-console": "workspace:*",
-    "@runmedev/renderers": "workspace:*"
+    "@runmedev/react-console": "workspace:*"
   },
   "scripts": {
     "clean": "rimraf dist",
@@ -30,8 +29,6 @@
     "test:coverage": "vitest run --coverage"
   },
   "peerDependencies": {
-    "@runmedev/react-console": "workspace:*",
-    "@runmedev/renderers": "workspace:*",
     "js-cookie": "^3.0.5",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
