Add buff to .npmruc

--- a/.npmrc
+++ b/.npmrc
@@ -12,3 +12,6 @@ auto-install-peers=true
 
 # Use the latest pnpm store
 store-dir=.pnpm-store 
+
+# Resolve buf registry
+@buf:registry=https://buf.build/gen/npm/v1
