app build works; remove uikit. App doesn't load; unable to load oauth sdkadapter.

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "clean": "pnpm --filter @runmedev/renderers run clean && pnpm --filter @runmedev/react-components run clean && pnpm --filter @runmedev/react-console run clean",
     "build": "pnpm run clean && pnpm run build:renderers && pnpm run build:console && pnpm run build:components && pnpm run build:app",
     "build:components": "cd packages/react-components && tsc -b && vite build",
-    "build:app": "cd packages/react-components && tsc -b tsconfig.app.json && vite build -c vite.config.app.ts",
+    "build:app": "pnpm -C app run build",
     "build:console": "cd packages/react-console && tsc -p tsconfig.json && vite build",
     "build:renderers": "cd packages/renderers && tsc -p tsconfig.json && vite build",
-    "dev": "cd packages/react-components && vite -c vite.config.app.ts",
-    "preview": "pnpm run build:app && cd packages/react-components && vite preview -c vite.config.app.ts",
+    "dev": "pnpm -C app run dev",
+    "dev:app": "pnpm -C app run dev",
+    "preview": "pnpm run build:app && pnpm -C app run preview",
     "lint": "eslint .",
     "test": "pnpm --filter @runmedev/react-components run test && pnpm --filter @runmedev/react-console run test",
     "test:run": "pnpm --filter @runmedev/react-components run test:run && pnpm --filter @runmedev/react-console run test:run",
