--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@oai/aisre-web",
+  "name": "@runmedev/app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -24,7 +24,6 @@
     "@monaco-editor/react": "^4.7.0",
     "@oai/auth-sdk": "workspace:*",
     "@oai/auth-sdk-browser-adapter": "workspace:*",
-    "@oai/platform": "workspace:*",
     "@openai/chatkit-react": "1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.4",
@@ -39,9 +38,9 @@
     "jwt-decode": "^4.0.0",
     "md5": "2.3.0",
     "postcss-value-parser": "4.2.0",
-    "react": "catalog:react-19",
+    "react": "19.2.0",
     "react-arborist": "^3.4.3",
-    "react-dom": "catalog:react-19",
+    "react-dom": "19.2.0",
     "react-google-drive-picker": "1.2.2",
     "react-helmet": "^6.1.0",
     "react-markdown": "^9.1.0",
@@ -58,9 +57,9 @@
     "@eslint/js": "^9.19.0",
     "@testing-library/react": "16.3.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/node": "catalog:node-22",
-    "@types/react": "catalog:react-19",
-    "@types/react-dom": "catalog:react-19",
+    "@types/node": "^22.0.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
     "@types/react-helmet": "^6.1.11",
     "@types/uuid": "^10.0.0",
     "@types/vscode-notebook-renderer": "^1.72.3",
@@ -69,11 +68,11 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^16.0.0",
     "jsdom": "27.4.0",
-    "prettier": "catalog:prettier-3",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4.0.10",
-    "typescript": "catalog:typescript-5",
+    "typescript": "~5.8.3",
     "typescript-eslint": "^8.22.0",
-    "vite": "catalog:vite-6",
+    "vite": "^6.3.6",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-svgr": "4.3.0",
     "vitest": "^2.1.9"
