--- a/app/package.json
+++ b/app/package.json
@@ -22,8 +22,6 @@
     "@connectrpc/connect-web": "^2.0.2",
     "@datadog/datadog-api-client": "^1.45.0",
     "@monaco-editor/react": "^4.7.0",
-    "@oai/auth-sdk": "workspace:*",
-    "@oai/auth-sdk-browser-adapter": "workspace:*",
     "@openai/chatkit-react": "1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.4",
@@ -37,6 +35,8 @@
     "dexie-react-hooks": "4.2.0",
     "jwt-decode": "^4.0.0",
     "md5": "2.3.0",
+    "oauth4webapi": "^2.4.0",
+    "pkce-challenge": "^4.1.0",
     "postcss-value-parser": "4.2.0",
     "react": "19.2.0",
     "react-arborist": "^3.4.3",
