Correct encoding and draw attention to relevant values
Signed-off-by: Sebastian (Tiedtke) Huckleberry <sebastiantiedtke@gmail.com>

--- a/app/.env
+++ b/app/.env
@@ -1,3 +1,7 @@
-VITE_OAUTH_CLIENT_ID: "notavalidclientid"
-VITE_OAUTH_SCOPE: "openid email offline_access api.responses.read api.responses.write model.request"
-VITE_AUTHAPI_BASE_URL: "https://auth.openai.com"
+# Google OAuth credentials (required)
+VITE_OAUTH_CLIENT_ID="notavalidclientid"
+VITE_OAUTH_CLIENT_SECRET="notavalidclientsecret"
+
+# Google OAuth configuration (default values, typically unchanged)
+VITE_OAUTH_SCOPE="openid email profile"
+VITE_OIDC_DISCOVERY_URL="https://accounts.google.com/.well-known/openid-configuration"
