--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "license": "Apache-2.0",
   "type": "module",
   "scripts": {
-    "clean": "pnpm --filter @runmedev/renderers run clean && pnpm --filter @runmedev/react-components run clean && pnpm --filter @runmedev/react-console run clean",
-    "build": "pnpm run clean && pnpm run build:renderers && pnpm run build:console && pnpm run build:components && pnpm run build:app",
-    "build:components": "cd packages/react-components && tsc -b && vite build",
+    "clean": "pnpm --filter @runmedev/renderers run clean && pnpm --filter @runmedev/react-console run clean",
+    "build": "pnpm run clean && pnpm run build:renderers && pnpm run build:console && pnpm run build:app",
     "build:app": "pnpm -C app run build",
     "build:console": "cd packages/react-console && tsc -p tsconfig.json && vite build",
     "build:renderers": "cd packages/renderers && tsc -p tsconfig.json && vite build",
@@ -15,10 +14,9 @@
     "dev:app": "pnpm -C app run dev",
     "preview": "pnpm run build:app && pnpm -C app run preview",
     "lint": "eslint .",
-    "test": "pnpm --filter @runmedev/react-components run test && pnpm --filter @runmedev/react-console run test",
-    "test:run": "pnpm --filter @runmedev/react-components run test:run && pnpm --filter @runmedev/react-console run test:run",
-    "test:ui": "pnpm --filter @runmedev/react-components run test:ui",
-    "test:coverage": "pnpm --filter @runmedev/react-components run test:coverage && pnpm --filter @runmedev/react-console run test:coverage",
+    "test": "pnpm --filter @runmedev/react-console run test",
+    "test:run": "pnpm --filter @runmedev/react-console run test:run",
+    "test:coverage": "pnpm --filter @runmedev/react-console run test:coverage",
     "changeset": "changeset",
     "version-packages": "changeset version",
     "publish-packages": "changeset publish"
