--- a/app/package.json
+++ b/app/package.json
@@ -53,7 +53,8 @@
     "rxjs": "^7.8.2",
     "ulid": "^2.4.0",
     "use-resize-observer": "^9.1.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
