--- a/.github/workflows/releaser.yaml
+++ b/.github/workflows/releaser.yaml
@@ -47,6 +47,16 @@ jobs:
           go-version-file: releaser/go.mod
           cache-dependency-path: releaser/go.sum
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          run_install: false
+
       - name: Build releaser
         run: |
           cd releaser
