--- a/.github/workflows/releaser.yaml
+++ b/.github/workflows/releaser.yaml
@@ -67,6 +67,14 @@ jobs:
           cd releaser
           go build -o ../releaser-bin .
 
+      - name: Login to GitHub Container Registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Run releaser
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
