--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "typecheck": "tsc -p tsconfig.app.json --noEmit",
     "build": "vite build",
+    "cuj:build": "tsc --target es2020 --module nodenext --moduleResolution nodenext --esModuleInterop --skipLibCheck --outDir test/browser/.generated test/browser/run-cuj-scenarios.ts",
+    "cuj:run": "pnpm run cuj:build && node test/browser/.generated/run-cuj-scenarios.js",
     "lint": "eslint .",
     "format": "prettier --ignore-path .prettierignore --write .",
     "preview": "vite preview",
