--- a/.github/workflows/codex-cuj.yaml
+++ b/.github/workflows/codex-cuj.yaml
@@ -29,6 +29,14 @@ jobs:
       GCP_WIF_PROVIDER_ID: github-provider
       GCP_SERVICE_ACCOUNT_EMAIL: runme-gha@runme-lewi-dev.iam.gserviceaccount.com
     steps:
+      - name: Dump GitHub OIDC claims
+        shell: bash
+        run: |
+          set -euo pipefail
+          TOK="$(curl -sSf -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
+            "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=sts.googleapis.com" | jq -r .value)"
+          echo "$TOK" | cut -d. -f2 | tr '_-' '/+' | base64 -d 2>/dev/null | jq '{repository, repository_owner, ref, sub, aud}'
+
       - name: Authenticate to Google Cloud
         id: gcp_auth
         uses: google-github-actions/auth@v2
